k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burty-api
  labels:
    app.kubernetes.io/name: burty-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: burty-api
  ports:
    # Istio 는 포트 이름의 prefix 로 프로토콜을 판별한다. http- 를 반드시 유지할 것.
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
      appProtocol: http
